Replace List.of() with  Arrays.asList() to fix CI/CD broken