@@ -6,6 +6,7 @@ import model.behavior.Behavior;
 import model.config.SimulationConstants;
 import model.world.SimulationGrid;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Civilian extends Human{
@@ -18,15 +19,24 @@ public class Civilian extends Human{
     }
 
 
-    @Override protected List<Behavior> getBehaviors() {
-        return List.of(
+    @Override
+    protected List<Behavior> getBehaviors() {
+        return Arrays.asList(
                 this::pickup,
                 this::formSettlement,
                 this::infectionCheck
         );
     }
 
-    private Action pickup(LivingEntity me, SimulationGrid g) { tryPickup(g); return Action.PICKUP; }
-    private Action formSettlement(LivingEntity me, SimulationGrid g) { moveToFormSettlement(g); return Action.GROUP; }
-    private Action infectionCheck(LivingEntity me, SimulationGrid g) { decrementInfectionTimer(); return Action.IDLE; }
+    private Action pickup(LivingEntity me, SimulationGrid g) {
+        tryPickup(g); return Action.PICKUP;
+    }
+
+    private Action formSettlement(LivingEntity me, SimulationGrid g) {
+        moveToFormSettlement(g); return Action.GROUP;
+    }
+
+    private Action infectionCheck(LivingEntity me, SimulationGrid g) {
+        decrementInfectionTimer(); return Action.IDLE;
+    }
 }
