@@ -6,6 +6,7 @@ import model.behavior.Behavior;
 import static model.config.SimulationConstants.*;
 import model.world.SimulationGrid;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -20,8 +21,9 @@ public class Soldier extends Human {
         baseSpeed = SOLDIER_SPEED;
     }
 
-    @Override protected List<Behavior> getBehaviors() {
-        return List.of(
+    @Override
+    protected List<Behavior> getBehaviors() {
+        return Arrays.asList(
                 this::pickup,
                 this::defendSettlement,
                 this::attackZombies,
@@ -29,7 +31,10 @@ public class Soldier extends Human {
         );
     }
 
-    private Action pickup(LivingEntity me, SimulationGrid g) { tryPickup(g); return Action.PICKUP; }
+    private Action pickup(LivingEntity me, SimulationGrid g) {
+        tryPickup(g); return Action.PICKUP;
+    }
+
     private Action defendSettlement(LivingEntity me, SimulationGrid g) {
         Civilian c = g.findNearest(me.getX(), me.getY(), Civilian.class);
         if (c != null && c.isInSettlement(g) && g.distanceBetween(me, c) > 4) {
@@ -37,10 +42,15 @@ public class Soldier extends Human {
         }
         return Action.GROUP;
     }
+
     private Action attackZombies(LivingEntity me, SimulationGrid g) {
         var z = g.findNearest(me.getX(), me.getY(), Zombie.class);
         if (z != null && g.distanceBetween(me, z) <= 3) attack(z);
         return Action.ATTACK;
     }
-    private Action infectionCheck(LivingEntity me, SimulationGrid g) { decrementInfectionTimer(); return Action.IDLE; }
+
+    private Action infectionCheck(LivingEntity me, SimulationGrid g) {
+        decrementInfectionTimer();
+        return Action.IDLE;
+    }
 }
